--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
 <html>
-A da shmello world!
+	<head>
+		<title>Tom's Textbook Website'</title>
+	</head
+
+	<div id="content">
+
+	</div>
+	<footer>
+		<script src="js/analyze.js"></script>
+	</footer>
+
 </html>
